Minor CSS tweak to fix heading alignments on a few tables in the sheet

--- a/DnDNext_Actoba/DnDNext.css
+++ b/DnDNext_Actoba/DnDNext.css
@@ -85,7 +85,7 @@
 }
 
 .charsheet .sheet-vert-bottom {
-	vertical-align: bottom;
+	vertical-align: bottom!important;
 }
 
 .charsheet .sheet-center{
